# mag2exp

./: .gitignore  .pre-commit-config.yaml  LICENSE  LTEM.ipynb  LTEM_df_based.ipynb  Makefile  README.md  make.bat  nbval.cfg  pyproject.toml  setup.cfg  tasks.py
.github/: environment.yml
.github/workflows/: publish.yml  workflow.yml
binder/: environment.yml
dev/: AC_test.ipynb  Demagnetisation.ipynb  Kerr.ipynb  LTEM.ipynb  LTEM_df_based-Copy1.ipynb  LTEM_df_based.ipynb  MOKE.ipynb  SANS_df_based.ipynb  SXRMS.ipynb  Torque_magnetometry.ipynb  X-ray Holography .ipynb  X-ray_Holo_df_based.ipynb  torque.ipynb  torque_df_based.ipynb
docs/: DC_magnetometry.ipynb  FMR.ipynb  Lorentz_TEM.ipynb  Magnetic_Force_Microscopy.ipynb  Rotations_Lorentz_Microscopy.ipynb  SANS.ipynb  SAXS.ipynb  Torque_magnetometry.ipynb  Unit_converter.ipynb  X_ray_Holography.ipynb  conf.py  index.rst
docs/ipynb/: AC_test.ipynb  DC_magnetometry.ipynb  Demagnetisation.ipynb  LTEM_df_based.ipynb  Lorentz_TEM.ipynb  MFM_df_based.ipynb  MOKE.ipynb  Magnetic_Force_Microscopy.ipynb  Rotations_Lorentz_Microscopy.ipynb  Rotations_Lorentz_TEM.ipynb  SANS rocking curve.ipynb  SANS.ipynb  SANS2.ipynb  SANS_df_based.ipynb  SAXS.ipynb  Torque_magnetometry.ipynb  Unit_converter.ipynb  X-ray_Holo_df_based.ipynb  X-ray_Holography.ipynb  X_ray_Holography.ipynb  magnetometry.ipynb  torque_df_based.ipynb
exsim/: SANS.ipynb  __init__.py  ltem.py  mfm.py  quick_plots.py  sans.py  x_ray_holography.py
exsim/tests/: test_ltem.py  test_mfm.py  test_x_ray_holography.py
exsim/util/: __init__.py  util.py
mag2exp/: __init__.py  fmr.py  ltem.py  magnetometry.py  mfm.py  moke.py  quick_plots.py  sans.py  x_ray.py  x_ray_holography.py
mag2exp/tests/: test_fmr.py  test_ltem.py  test_magnetisation.py  test_mfm.py  test_moke.py  test_quick_plots.py  test_sans.py  test_util.py  test_x_ray.py  test_x_ray_holography.py
mag2exp/util/: __init__.py  util.py
original-code/: MFM.ipynb  ltem_simulation.py
