[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mag2exp"
version = "0.64.0"
description = "Simulate experimental measurements for magnetic materials"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

authors = [
    {name = "Samuel Holt"},
    {name = "Martin Lang"},
    {name = "James Loudon"},
    {name = "Thomas Hicken"},
    {name = "Swapneel Amit Pathak"},
    {name = "David Cortés Ortuño"},
    {name = "Marijan Beg"},
    {name = "Hans Fangohr"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
    "oommfc>=0.66.0",
    "numpy>=1.19",
    "scipy>=1.6"
]

[project.optional-dependencies]
dev = [
    "build",
    "invoke",
    "nbval",
    "pre-commit",
    "pytest-cov",
    "twine",
    "tomli; python_version < '3.11'",
]

[project.urls]
homepage = "https://ubermag.github.io"
documentation = "https://ubermag.github.io/documentation/mag2exp"
repository = "https://github.com/ubermag/mag2exp"




[tool.coverage.run]
omit = ["mag2exp/tests/*"]

[tool.ruff.lint]
ignore-init-module-imports = true  # do not remove unused imports in __init__ and warn instead
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    # conflict with other rules
    "D203",  # one-blank-line-before-class (conflicts with D204)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
    # conflict with formatter
    "D206",  # indent-with-spaces
    "D300",  # triple-single-quotes
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    # conflict with Python 3.6 compatibility
    "UP022", # replace-stdout-stderr
]

[tool.ruff.lint.isort]
known-local-folder = ["mag2exp"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "B018",  # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
    "E501",  # line too long
    "F811",  # 'redefined-while-unused'; many false positives in notebooks because ipywidgets decorated functions are not recognised
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",  # dependency of k3d
]

[tool.setuptools.packages.find]
include = ["mag2exp*"]

# to define additional information we use a custom table
# see: https://www.python.org/dev/peps/pep-0518/#tool-table
[tool.ubermag]
doi = "10.5281/zenodo.5564954"
copyright_holder = "Samuel Holt"
contributors = [
]
about = """
- simulations of experimental techniques perfomed on magnetisation textures,
- the ability to perform "virtual" experiments,
- the functionality to compare of real experimental results agaist simulated experiments.
"""
