[metadata]
name =
version =
description =
author = Sam Holt, Martin Lang, Marijan Beg, and Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ubermag.github.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
include_package_data = True
python_requires >= 3.8
install_requires=
    discretisedfield ~= 0.11.1
    micromagneticmodel ~= 0.11.1
    scipy >= 1.5
    numpy >= 1.19