[metadata]
name = mag2exp
version = 0.1
description = Simulate experimental measurements for magnetic materials
author = Samuel Holt, James Loudon, Thomas Hicken, Geeta Balakrishnan, David Cortés Ortuño, Martin Lang, Marijan Beg, Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = ubermag.github.io
licence = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Education
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: Unix
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires >= 3.8
install_requires =
  discretisedfield==0.11.1
  micromagneticmodel==0.11.1
  oommfc==0.10.1
  numpy>=1.19
  scipy>=1.6
include_package_data = True

[options.entry_points]


